app/assets/stylesheets/elements/dialog_small_edit.css.scss
@import "compass";
@import "../common/vars";

.edit_text_dialog {
  position:absolute!important;
  padding: 11px;
  @include box-shadow(rgba(black, 0.17) 0 0 6px 1px);
  @include border-radius(4px);
  @include background(linear-gradient(#FEFEFE, #F4F4F4));
  border: 1px solid #B7B7B7;
  max-width:500px;
  max-height:500px;
  z-index:0!important;

  a.button {
    margin-top: 9px;
    padding: 6px 15px!important;
    letter-spacing: 0;
  }

  a.cancel {
    margin-top: 19px;
    font-size: 13px;
    text-decoration: underline;
    text-transform: lowercase;
  }

  a.link {
    margin-top: 19px;
    font-size: 13px;
    text-decoration: underline;
    text-transform: lowercase;
    margin-right: 3px;
  }



  input, textarea {
    position:relative;
    display:block;
    max-width:500px - 22;
    max-height:500px - 60;
    margin: 0!important;
    padding: 10px;
    font-family: $text-fonts;
    font-size: 15px;
    color: #666666;
    border: 1px solid #C0C1C2;
    background: #FFF;
    @include border-radius(4px);

    &:focus {
      outline:none;
      border-color:#999999;
    }
  }


  // Edit date dialog
  &.date_dialog {
    .select2-container {width:100px!important;}
    div.field {
      @include inline-block();
      label {display:block; margin:0 0 5px; font:bold 10px $text-fonts; color:#999999;}
    }

    input.time {
      width:50px;
      padding:0 5px;
      height:19px;
      font-size:13px;
      line-height:19px;
      border-color:#9E9E9E;
      &.error {border-color:rgba(red,0.5);}
    }
  }

  // Edit boolean dialog
  &.boolean_dialog {
    nav {
      display:block;
      border:1px solid #CCCCCC;
      @include border-radius(4px);
      background:white;
      padding:12px 5px 12px 20px;
      a {
        @include inline-block(); width:65px; font-weight:normal; font-size:13px;
        span.radio {margin-top:0!important;}
        &:hover {text-decoration:none;}
      }
    }
  }


  // Edit number dialog
  &.number_dialog {
    textarea.error {border-color:rgba(red,0.5);}
  }

  // Edit geometry dialog
  &.geometry_dialog {
    textarea.error, input.error {border-color:rgba(red,0.5);}

    div.loader {
      display:block;
      width:100%;
      height:50px;
      background: url('/assets/layout/loader.gif') no-repeat center center transparent;
    }
    div.rest {display:none;}
    div.point {
      display:none;
      width:100%;
      height:30px;
      input {
        position:absolute;
        top:10px;
        width:31%;
        padding:5px 5px 5px 36px;
        height:19px;
        font-size:15px;
        line-height:19px;
        border-color:#9E9E9E;
        text-align:right;
        &.latitude {right:10px;}
        &.longitude {left:10px;}
        &.error {border-color:rgba(red,0.5);}
      }

      p {position:absolute; top:15px; left:50%; margin-left:-3px; font-size:20px;}

      label {
        position:absolute; top:20px; font-style:italic; color:#AAAAAA; z-index:10; font-size:13px;
        &.latitude {left:55%;}
        &.longitude {left:18px;}
      }
    }
  }

  .hidden {
    display: none;
  }
}

.floating.edit_name_dialog {
  min-width:280px;
  padding: 5px;
  @include background(linear-gradient(rgba(black, 0.5), rgba(#212121,0.5)));
  @include border-radius(4px);
  @include box-shadow(rgba(0,0,0,0.12) 0 0 2px 2px);

  .content {
    float: left;
    @include inline-block();
  }

  input {
    position:absolute;
    top:5px;
    left:5px;
    right:65px;
    bottom:5px;
    font-size: 15px;
    color: #333333;
    border: 1px solid #000;
    padding: 10px;
    line-height:normal;
    @include border-radius(4px);
    margin: 0 3px 0 0;
    &:focus {
      outline:none;
    }
  }


  a.ok {
    padding: 1px + (36px - 15px)/2 !important;
    border: 1px solid #000 !important;
    font-size: 15px !important;
    font-weight: bold !important;
    letter-spacing:0;
    @include border-radius(4px);
  }

  &.tags-dialog {
    ul {
      position:relative;
      @include inline-block();
      min-height:24px;
      max-height:300px!important;
      min-width:215px;
      max-width:400px;
      margin:0 3px 0 0;
      padding:4px 4px 1px 4px;
      background:white;
      border: 1px solid #000;
      @include border-radius(4px);

      li.tagit-choice {
        margin:0 3px 3px 0;
        padding:0;
        background:#4086C3;
        border:1px solid #2B5B85;
        @include border-radius(3px);
        font:normal 11px "Arial";
        color:#FFFFFF;

        span.tagit-label {
          @include inline-block();
          padding:0px 5px;
          border-right:1px solid #2B5B85;
          line-height:19px;
        }

        a.tagit-close {
          position:relative;
          @include inline-block();
          width:auto;
          height:100%;
          margin:0;
          line-height:19px;

          &:hover {
            span.text-icon {color:white;}
            text-decoration:none;
          }

          span.text-icon {
            display:block;
            margin:0;
            padding:0 5px 0px 7px;
            line-height:19px;
            color:#1F4362;
          }
        }
      }

      li.tagit-new {
        padding:0;
        margin-top:0;
        margin-bottom:0;

        input {
          @include inline-block();
          position:relative;
          top:0;
          right:auto;
          left:auto;
          bottom:auto;
          margin:3px 0 3px 5px;
          padding:0;
          font-size:13px;
          line-height:15px;
        }
      }
    }

    a.ok {
      padding: 6px 15px !important;
      border: 1px solid #000 !important;
      font-size: 15px !important;
      font-weight: bold !important;
      letter-spacing:0;
      @include border-radius(4px);

      &:active {
        border-color:#ACACAC;
        background:#D3D3D3; // IE
        @include background(linear-gradient(#F9F9F9,#E1E1E1));
        @include box-shadow(rgba(255,255,255,0) 0 0 1px 0,rgba(130,126,111,0.6) 0 1px 3px 0 inset);
      }
    }
  }
}

